Making pdf smaller - to submit in WIS

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -1143,7 +1143,7 @@ The \gls{ols} does not provide a single integrated graphical user interface. Con
 %% GUI
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width=0.85\linewidth]{fig/gui.png}
+	\includegraphics[width=0.85\linewidth]{fig/gui.jpg}
 	\caption{The graphical interface of the \gls{ols} containing the \textit{camera\_stream} windows (top), \textit{rviz} window (bottom left) and \textit{maps} window (bottom right).}
 	\label{fig:gui}
 \end{figure}
@@ -1401,7 +1401,7 @@ In case of \textsc{meadow} dataset the system was tested against one dynamic ter
 
 \begin{figure}[htb]\centering
 	\centering
-	\includegraphics[width=0.44\linewidth]{fig/eval_walking.png}
+	\includegraphics[width=0.44\linewidth]{fig/eval_walking.jpg}
 	\includegraphics[width=0.54\linewidth]{fig/eval_walking_error.pdf}
 	\caption{The comparison of the ground truth and estimated trajectory of a target moving in the distance range of ca $50$--$200~m$ (left). The error as the function of the distance of the target is also displayed (right). The system makes the average error of $6.25~m$.}
 	\label{fig:resultsWalking}
